--- a/index.html
+++ b/index.html
@@ -484,15 +484,15 @@
       </div>
       <script>
          const gameDetails = {
-         	nation1: "India",
-         	nation2: "Pakistan",
-         	date: "Mar 8-12, 2005",
-         	venue: "Mohali",
-         	score: "Pakistan 312 & 496/9d, India (T: 293) 516 & 85/1; Match drawn",
-         	crickdlequestion: "Pakistan player scored 109 in this match?"
+         	nation1: "West Indies",
+         	nation2: "Zimbabwe",
+         	date: "Mar 16-20, 2000",
+         	venue: "Port of Spain",
+         	score: "West Indies 187 & 147, Zimbabwe (T: 99) 236 & 63; West Indies won by 35 runs",
+         	crickdlequestion: "West Indies player took 4/42 & 3/8 in this match?"
          };
          
-         const correctPlayer = ["AKMAL"];
+         const correctPlayer = ["AMBROSE"];
          localStorage.setItem("correctPlayer", JSON.stringify(correctPlayer[0]));
          
          document.getElementById("nation1").textContent = gameDetails.nation1;
