--- a/index.html
+++ b/index.html
@@ -485,14 +485,14 @@
       <script>
          const gameDetails = {
          	nation1: "West Indies",
-         	nation2: "Zimbabwe",
-         	date: "Mar 16-20, 2000",
-         	venue: "Port of Spain",
-         	score: "West Indies 187 & 147, Zimbabwe (T: 99) 236 & 63; West Indies won by 35 runs",
-         	crickdlequestion: "West Indies player took 4/42 & 3/8 in this match?"
+         	nation2: "Australia",
+         	date: "Jun 11-14, 2015",
+         	venue: "Kingston",
+         	score: "Australia 399 & 212/2d, West Indies (T: 392) 220 & 114; Australia won by 277 runs",
+         	crickdlequestion: "Australia player scored 199 & 54* in this match?"
          };
          
-         const correctPlayer = ["AMBROSE"];
+         const correctPlayer = ["SMITH"];
          localStorage.setItem("correctPlayer", JSON.stringify(correctPlayer[0]));
          
          document.getElementById("nation1").textContent = gameDetails.nation1;
