--- a/index.html
+++ b/index.html
@@ -484,15 +484,15 @@
       </div>
       <script>
          const gameDetails = {
-         	nation1: "West Indies",
+         	nation1: "New Zealand",
          	nation2: "Australia",
-         	date: "Jun 11-14, 2015",
-         	venue: "Kingston",
-         	score: "Australia 399 & 212/2d, West Indies (T: 392) 220 & 114; Australia won by 277 runs",
-         	crickdlequestion: "Australia player scored 199 & 54* in this match?"
+         	date: "Mar 18-22, 2005",
+         	venue: "Wellington",
+         	score: "Australia 570/8d, New Zealand (f/o) 244 & 48/3; Match drawn",
+         	crickdlequestion: "Australia player scored 162 in this match?"
          };
          
-         const correctPlayer = ["SMITH"];
+         const correctPlayer = ["GILCHRIST"];
          localStorage.setItem("correctPlayer", JSON.stringify(correctPlayer[0]));
          
          document.getElementById("nation1").textContent = gameDetails.nation1;
