--- a/index.html
+++ b/index.html
@@ -484,15 +484,15 @@
       </div>
       <script>
          const gameDetails = {
-         	nation1: "New Zealand",
-         	nation2: "Australia",
-         	date: "Mar 18-22, 2005",
-         	venue: "Wellington",
-         	score: "Australia 570/8d, New Zealand (f/o) 244 & 48/3; Match drawn",
-         	crickdlequestion: "Australia player scored 162 in this match?"
+         	nation1: "Sri Lanka",
+         	nation2: "England",
+         	date: "Mar 15-17, 2001",
+         	venue: "Colombo (SSC)",
+         	score: "Sri Lanka 241 & 81, England (T: 74) 249 & 74/6; England won by 4 wickets",
+         	crickdlequestion: "England player scored 113* & 32* in this match?"
          };
          
-         const correctPlayer = ["GILCHRIST"];
+         const correctPlayer = ["THORPE"];
          localStorage.setItem("correctPlayer", JSON.stringify(correctPlayer[0]));
          
          document.getElementById("nation1").textContent = gameDetails.nation1;
