--- a/index.html
+++ b/index.html
@@ -484,15 +484,15 @@
       </div>
       <script>
          const gameDetails = {
-         	nation1: "Sri Lanka",
-         	nation2: "England",
-         	date: "Mar 15-17, 2001",
-         	venue: "Colombo (SSC)",
-         	score: "Sri Lanka 241 & 81, England (T: 74) 249 & 74/6; England won by 4 wickets",
-         	crickdlequestion: "England player scored 113* & 32* in this match?"
+         	nation1: "Zimbabwe",
+         	nation2: "West Indies",
+         	date: "Oct 29-Nov 2, 2017",
+         	venue: "Bulawayo",
+         	score: "Zimbabwe 326 & 301/7, West Indies 448; Match drawn",
+         	crickdlequestion: "Zimbabwe player scored 80 & 89 and took 5/99 in this match?"
          };
          
-         const correctPlayer = ["THORPE"];
+         const correctPlayer = ["RAZA"];
          localStorage.setItem("correctPlayer", JSON.stringify(correctPlayer[0]));
          
          document.getElementById("nation1").textContent = gameDetails.nation1;
