--- a/index.html
+++ b/index.html
@@ -485,14 +485,14 @@
       <script>
          const gameDetails = {
          	nation1: "England",
-         	nation2: "Australia",
-         	date: "Aug 20-23, 2009",
-         	venue: "The Oval",
-         	score: "England 332 & 373/9d, Australia (T: 546) 160 & 348; England won by 197 runs",
-         	crickdlequestion: "England player scored 37 & 29 and took 5/37 & 1/71 in this match?"
+         	nation2: "Pakistan",
+         	date: "Aug 21-25, 2020",
+         	venue: "Southampton",
+         	score: "England 583/8d, Pakistan (f/o) 273 & 187/4; Match drawn",
+         	crickdlequestion: "England player scored 267 in this match?"
          };
          
-         const correctPlayer = ["BROAD"];
+         const correctPlayer = ["CRAWLEY"];
          localStorage.setItem("correctPlayer", JSON.stringify(correctPlayer[0]));
          
          document.getElementById("nation1").textContent = gameDetails.nation1;
