--- a/index.html
+++ b/index.html
@@ -686,6 +686,7 @@ if (ukTime < gamePeriodStart) {
                   if (correctPlayer.includes(guess)) {
                       guessInput.style.backgroundColor = "#1dc278";
                       guessInput.style.color = "white";
+                      localStorage.setItem('playedTimestamp', new Date().toISOString());
              saveState();
                       const resultURL = "result.html?isCorrect=true&" +
             "guess1=" + guessInputs[0].querySelector("input").style.backgroundColor +
