--- a/index.html
+++ b/index.html
@@ -484,15 +484,15 @@
       </div>
       <script>
          const gameDetails = {
-         	nation1: "England",
-         	nation2: "Pakistan",
-         	date: "Aug 21-25, 2020",
-         	venue: "Southampton",
-         	score: "England 583/8d, Pakistan (f/o) 273 & 187/4; Match drawn",
-         	crickdlequestion: "England player scored 267 in this match?"
+         	nation1: "South Africa",
+         	nation2: "New Zealand",
+         	date: "Nov 8-11, 2007",
+         	venue: "Johannesburg",
+         	score: "South Africa 226 & 422/3d, New Zealand (T: 531) 118 & 172; South Africa won by 358 runs",
+         	crickdlequestion: "South Africa player took 5/34 & 5/59 in this match?"
          };
          
-         const correctPlayer = ["CRAWLEY"];
+         const correctPlayer = ["STEYN"];
          localStorage.setItem("correctPlayer", JSON.stringify(correctPlayer[0]));
          
          document.getElementById("nation1").textContent = gameDetails.nation1;
