--- a/index.html
+++ b/index.html
@@ -484,15 +484,15 @@
       </div>
       <script>
          const gameDetails = {
-         	nation1: "South Africa",
-         	nation2: "New Zealand",
-         	date: "Nov 8-11, 2007",
-         	venue: "Johannesburg",
-         	score: "South Africa 226 & 422/3d, New Zealand (T: 531) 118 & 172; South Africa won by 358 runs",
-         	crickdlequestion: "South Africa player took 5/34 & 5/59 in this match?"
+         	nation1: "England",
+         	nation2: "South Africa",
+         	date: "Jul 19-23, 2012",
+         	venue: "The Oval",
+         	score: "England 385 & 240, South Africa 637/2d; South Africa won by an innings and 12 runs",
+         	crickdlequestion: "South Africa player scored 311* in this match?"
          };
          
-         const correctPlayer = ["STEYN"];
+         const correctPlayer = ["AMLA"];
          localStorage.setItem("correctPlayer", JSON.stringify(correctPlayer[0]));
          
          document.getElementById("nation1").textContent = gameDetails.nation1;
