--- a/result.html
+++ b/result.html
@@ -371,20 +371,27 @@ function checkPlayedToday() {
   const playedToday = localStorage.getItem('playedToday');
   const playedTimestamp = localStorage.getItem('playedTimestamp');
 
+  const now = new Date();
+  const ukTime = getUKTime(now);
+  const targetTime = new Date(ukTime);
+  targetTime.setHours(9, 0, 0, 0);
+
   if (playedTimestamp) {
     const playedDate = new Date(playedTimestamp);
     const playedUKTime = getUKTime(playedDate);
-
-    const now = new Date();
-    const ukTime = getUKTime(now);
-    const targetTime = new Date(ukTime);
-    targetTime.setHours(9, 0, 0, 0);
 
     // If it's past 9 AM UK time on the next day, clear the playedToday flag
     if (ukTime >= targetTime && playedUKTime < targetTime) {
       clearPlayedToday();
     }
   }
+
+  if (!playedToday || (playedToday && ukTime >= targetTime)) {
+    // Redirect them to index.html
+    window.location.href = 'index.html';
+    return;
+  }
+}
 
   if (!playedToday) {
     // If the user hasn't played the game during the current 9 AM to 9 AM period
