--- a/index.html
+++ b/index.html
@@ -485,14 +485,14 @@
       <script>
          const gameDetails = {
          	nation1: "England",
-         	nation2: "Pakistan",
-         	date: "Aug 21-25, 2020",
-         	venue: "Southampton",
-         	score: "England 583/8d, Pakistan (f/o) 273 & 187/4; Match drawn",
-         	crickdlequestion: "England player scored 267 in this match?"
+         	nation2: "South Africa",
+         	date: "Jul 19-23, 2012",
+         	venue: "The Oval",
+         	score: "England 385 & 240, South Africa 637/2d; South Africa won by an innings and 12 runs",
+         	crickdlequestion: "South Africa player scored 311* in this match?"
          };
          
-         const correctPlayer = ["CRAWLEY"];
+         const correctPlayer = ["AMLA"];
          localStorage.setItem("correctPlayer", JSON.stringify(correctPlayer[0]));
          
          document.getElementById("nation1").textContent = gameDetails.nation1;
