--- a/result.html
+++ b/result.html
@@ -384,8 +384,8 @@
   const playedDate = new Date(playedTimestamp);
   const playedUKTime = getUKTime(playedDate);
 
-  // If it's past 9 AM UK time on the next day, redirect the user to index.html
-  if (ukTime >= targetTime && playedUKTime < targetTime) {
+  // If it's past 9 AM UK time on the next day and playedToday is not set, redirect the user to index.html
+  if (ukTime >= targetTime && playedUKTime < targetTime && !localStorage.getItem('playedToday')) {
     window.location.href = 'index.html';
   }
 }
