--- a/result.html
+++ b/result.html
@@ -378,18 +378,21 @@
   const now = new Date();
   const ukTime = getUKTime(now);
   const targetTime = new Date(ukTime);
-  
-  targetTime.setHours(9, 0, 0, 0);
 
-  if (ukTime.getHours() < 9) {
-    targetTime.setDate(targetTime.getDate() - 1);
-  }
+  targetTime.setHours(9, 0, 0, 0);
 
   const playedDate = new Date(playedTimestamp);
   const playedUKTime = getUKTime(playedDate);
 
   // If it's past 9 AM UK time on the next day, redirect the user to index.html
   if (ukTime >= targetTime && playedUKTime < targetTime) {
+    window.location.href = 'index.html';
+  } else if (isSamePeriod(playedTimestamp)) {
+    // If the user has already played during the current 9 AM to 9 AM period, don't redirect
+    return;
+  } else {
+    // If it's a new 9 AM to 9 AM period and the user hasn't played yet, redirect them to index.html
+    clearPlayedToday();
     window.location.href = 'index.html';
   }
 }
