--- a/result.html
+++ b/result.html
@@ -368,26 +368,29 @@
          schedulePlayedTodayClear(); // Initial call
          
          function checkPlayedToday() {
-  const playedTimestamp = localStorage.getItem('playedTimestamp');
-  if (!playedTimestamp) {
-    // If the user has never played the game, redirect them to index.html
-    window.location.href = 'index.html';
-    return;
-  }
+  const playedToday = localStorage.getItem('playedToday') === 'true';
+  if (playedToday) {
+    const playedTimestamp = localStorage.getItem('playedTimestamp');
+    const playedDate = new Date(playedTimestamp);
+    const playedUKTime = getUKTime(playedDate);
+    const now = new Date();
+    const ukTime = getUKTime(now);
+    const gamePeriodStart = new Date(ukTime);
 
-  const now = new Date();
-  const ukTime = getUKTime(now);
-  const targetTime = new Date(ukTime);
+    gamePeriodStart.setHours(9, 0, 0, 0);
 
-  targetTime.setHours(9, 0, 0, 0);
+    if (ukTime < gamePeriodStart) {
+      gamePeriodStart.setDate(gamePeriodStart.getDate() - 1);
+    }
 
-  const playedDate = new Date(playedTimestamp);
-  const playedUKTime = getUKTime(playedDate);
-
-  // If it's past 9 AM UK time on the next day, redirect the user to index.html
-  if (ukTime >= targetTime && playedUKTime < targetTime) {
-    clearPlayedToday();
-    window.location.href = 'index.html';
+    if (
+      (playedUKTime < gamePeriodStart && ukTime >= gamePeriodStart) ||
+      (playedUKTime >= gamePeriodStart && ukTime < gamePeriodStart)
+    ) {
+      localStorage.removeItem('playedToday');
+      localStorage.removeItem('playedTimestamp');
+      window.location.href = "index.html";
+    }
   }
 }
          
