--- a/index.html
+++ b/index.html
@@ -484,15 +484,15 @@
       </div>
       <script>
          const gameDetails = {
-         	nation1: "England",
-         	nation2: "South Africa",
-         	date: "Jul 19-23, 2012",
-         	venue: "The Oval",
-         	score: "England 385 & 240, South Africa 637/2d; South Africa won by an innings and 12 runs",
-         	crickdlequestion: "South Africa player scored 311* in this match?"
+         	nation1: "Australia",
+         	nation2: "England",
+         	date: "Dec 14-18, 2006",
+         	venue: "Perth",
+         	score: "Australia 244 & 527/5d, England (T: 557) 215 & 350; Australia won by 206 runs",
+         	crickdlequestion: "Australia player scored 74* & 103 in this match?"
          };
          
-         const correctPlayer = ["AMLA"];
+         const correctPlayer = ["HUSSEY"];
          localStorage.setItem("correctPlayer", JSON.stringify(correctPlayer[0]));
          
          document.getElementById("nation1").textContent = gameDetails.nation1;
