--- a/index.html
+++ b/index.html
@@ -621,10 +621,68 @@ if (ukTime < gamePeriodStart) {
          redirectToResultIfPlayedToday();
          
          submitButtons.forEach((button, index) => {
-         	button.addEventListener("click", (event) => {
-         		event.preventDefault();
-         		const guessInput = guessInputs[index].querySelector("input");
-         		const guess = guessInput.value;
+              button.addEventListener("click", (event) => {
+                             event.preventDefault();
+                             const guessInput = guessInputs[index].querySelector("input");
+                             const guess = guessInput.value;
+                             if (guess === '') {
+                                           const warningPopup = document.createElement("div");
+                                           warningPopup.innerHTML = "Not enough letters!";
+                                           warningPopup.style.position = "absolute";
+                                           warningPopup.style.top = "54px";
+                                           warningPopup.style.left = "50%";
+                                           warningPopup.style.transform = "translateX(-50%)";
+                                           warningPopup.style.padding = "0.5rem";
+                                           warningPopup.style.backgroundColor = "#000000";
+                                           warningPopup.style.color = "#fff";
+                                           warningPopup.style.fontSize = "1rem";
+                                           warningPopup.style.textAlign = "center";
+                                           warningPopup.style.borderRadius = "5px";
+                                           guessInput.parentNode.insertBefore(warningPopup, button);
+                                           setTimeout(() => {
+                                                         warningPopup.parentNode.removeChild(warningPopup);
+                                           }, 1500);
+                                           return;
+                             } else if (guess.split(' ').length > 1) {
+                                           const warningPopup = document.createElement("div");
+                                           warningPopup.innerHTML = "Surnames only please!";
+                                           warningPopup.style.position = "absolute";
+                                           warningPopup.style.top = "54px";
+                                           warningPopup.style.left = "50%";
+                                           warningPopup.style.transform = "translateX(-50%)";
+                                           warningPopup.style.padding = "0.5rem";
+                                           warningPopup.style.backgroundColor = "#000000";
+                                           warningPopup.style.color = "#fff";
+                                           warningPopup.style.fontSize = "1rem";
+                                           warningPopup.style.textAlign = "center";
+                                           warningPopup.style.borderRadius = "5px";
+                                           guessInput.parentNode.insertBefore(warningPopup, button);
+                                           setTimeout(() => {
+                                                        warningPopup.parentNode.removeChild(warningPopup);
+                                           }, 1500);
+                                           return;
+                             } else if (/[^a-zA-Z]/.test(guess)) {
+                                           const warningPopup = document.createElement("div");
+                                           warningPopup.innerHTML = "Letters only please!";
+                                           warningPopup.style.position = "absolute";
+                                           warningPopup.style.top = "54px";
+                                           warningPopup.style.left = "50%";
+                                           warningPopup.style.transform = "translateX(-50%)";
+                                           warningPopup.style.padding = "0.5rem";
+                                           warningPopup.style.backgroundColor = "#000000";
+                                           warningPopup.style.color = "#fff";
+                                           warningPopup.style.fontSize = "1rem";
+                                           warningPopup.style.textAlign = "center";
+                                           warningPopup.style.borderRadius = "5px";
+                                           guessInput.parentNode.insertBefore(warningPopup, button);
+                                           setTimeout(() => {
+                                                         warningPopup.parentNode.removeChild(warningPopup);
+                                           }, 1500);
+                                           return;
+                             } else {
+                                           guessInput.disabled = true;
+                                           button.disabled = true;
+                             }
                   if (correctPlayer.includes(guess)) {
                       guessInput.style.backgroundColor = "#1dc278";
                       guessInput.style.color = "white";
