--- a/index.html
+++ b/index.html
@@ -620,6 +620,8 @@ if (ukTime < gamePeriodStart) {
          loadState(); // Load the state from localStorage when the page loads
          redirectToResultIfPlayedToday();
          
+         const allowedTwoWordAnswers = ["COULTER-NILE", "DE SILVA", "UL-HAQ", "DE VILLIERS", "DE KOCK", "AL HASAN", "HAQUE JR", "DU PLESSIS"];
+         
          submitButtons.forEach((button, index) => {
               button.addEventListener("click", (event) => {
                              event.preventDefault();
@@ -643,7 +645,7 @@ if (ukTime < gamePeriodStart) {
                                                          warningPopup.parentNode.removeChild(warningPopup);
                                            }, 1500);
                                            return;
-                             } else if (guess.split(' ').length > 1) {
+                             } else if (guess.split(' ').length > 1 && !allowedTwoWordAnswers.includes(guess)) { 
                                            const warningPopup = document.createElement("div");
                                            warningPopup.innerHTML = "Surnames only please!";
                                            warningPopup.style.position = "absolute";
