--- a/result.html
+++ b/result.html
@@ -371,31 +371,28 @@
 	         schedulePlayedTodayClear(); // Initial call
 	         
 	         function checkPlayedToday() {
-	  const playedTimestamp = localStorage.getItem('playedTimestamp');
-	  if (!playedTimestamp) {
-	    // If the user has never played the game, redirect them to index.html
-	    window.location.href = 'index.html';
-	    return;
-	  }
-	
+  const playedTimestamp = localStorage.getItem('playedTimestamp');
+  if (!playedTimestamp) {
+    // If the user has never played the game, redirect them to index.html
+    window.location.href = 'index.html';
+    return;
+  }
 
-	  const now = new Date();
-	  const ukTime = getUKTime(now);
-	  const targetTime = new Date(ukTime);
-	
+  const now = new Date();
+  const ukTime = getUKTime(now);
+  const targetTime = new Date(ukTime);
 
-	  targetTime.setHours(9, 0, 0, 0);
-	
+  targetTime.setHours(9, 0, 0, 0);
 
-	  const playedDate = new Date(playedTimestamp);
-	  const playedUKTime = getUKTime(playedDate);
-	
+  const playedDate = new Date(playedTimestamp);
+  const playedUKTime = getUKTime(playedDate);
 
-	  // If it's past 9 AM UK time on the next day and playedToday is not set, redirect the user to index.html
-	  if (ukTime >= targetTime && playedUKTime < targetTime && !localStorage.getItem('playedToday')) {
-	    window.location.href = 'index.html';
-	  }
-	}
+  // If it's past 9 AM UK time on the next day and playedToday is not set, redirect the user to index.html
+  if (ukTime >= targetTime && playedUKTime < targetTime && !localStorage.getItem('playedToday')) {
+    localStorage.setItem('playedToday', 'true');
+    window.location.href = 'index.html';
+  }
+}
 	         
 	         function getUKTime(date) {
 	           return new Date(date.toLocaleString('en-US', { timeZone: 'Europe/London' }));
