--- a/index.html
+++ b/index.html
@@ -484,15 +484,15 @@
       </div>
       <script>
          const gameDetails = {
-         	nation1: "Australia",
+         	nation1: "West Indies",
          	nation2: "England",
-         	date: "Dec 14-18, 2006",
-         	venue: "Perth",
-         	score: "Australia 244 & 527/5d, England (T: 557) 215 & 350; Australia won by 206 runs",
-         	crickdlequestion: "Australia player scored 74* & 103 in this match?"
+         	date: "Mar 11-14, 2004",
+         	venue: "Kingston",
+         	score: "West Indies 311 & 47, England (T: 20) 339 & 20/0; England won by 10 wickets",
+         	crickdlequestion: "England player took 2/61 & 7/12 in this match?"
          };
          
-         const correctPlayer = ["HUSSEY"];
+         const correctPlayer = ["HARMISON"];
          localStorage.setItem("correctPlayer", JSON.stringify(correctPlayer[0]));
          
          document.getElementById("nation1").textContent = gameDetails.nation1;
