--- a/index.html
+++ b/index.html
@@ -484,15 +484,15 @@
       </div>
       <script>
          const gameDetails = {
-         	nation1: "West Indies",
-         	nation2: "England",
-         	date: "Mar 11-14, 2004",
-         	venue: "Kingston",
-         	score: "West Indies 311 & 47, England (T: 20) 339 & 20/0; England won by 10 wickets",
-         	crickdlequestion: "England player took 2/61 & 7/12 in this match?"
+         	nation1: "Zimbabwe",
+         	nation2: "West Indies",
+         	date: "Nov 4-8, 2003",
+         	venue: "Harare",
+         	score: "Zimbabwe 507/9d & 200/7d, West Indies (T: 373) 335 & 207/9; Match drawn",
+         	crickdlequestion: "Zimbabwe player scored 127* and took 2/74 & 2/28 in this match?"
          };
          
-         const correctPlayer = ["HARMISON"];
+         const correctPlayer = ["STREAK"];
          localStorage.setItem("correctPlayer", JSON.stringify(correctPlayer[0]));
          
          document.getElementById("nation1").textContent = gameDetails.nation1;
