--- a/index.html
+++ b/index.html
@@ -484,15 +484,15 @@
       </div>
       <script>
          const gameDetails = {
-         	nation1: "Zimbabwe",
-         	nation2: "West Indies",
-         	date: "Nov 4-8, 2003",
-         	venue: "Harare",
-         	score: "Zimbabwe 507/9d & 200/7d, West Indies (T: 373) 335 & 207/9; Match drawn",
-         	crickdlequestion: "Zimbabwe player scored 127* and took 2/74 & 2/28 in this match?"
+         	nation1: "England",
+         	nation2: "Pakistan",
+         	date: "Aug 5-8, 2020",
+         	venue: "Manchester",
+         	score: "Pakistan 326 & 169, England (T: 277) 219 & 277/7; England won by 3 wickets",
+         	crickdlequestion: "England player scored 84* and took 2/43 & 2/11 in this match?"
          };
          
-         const correctPlayer = ["STREAK"];
+         const correctPlayer = ["WOAKES"];
          localStorage.setItem("correctPlayer", JSON.stringify(correctPlayer[0]));
          
          document.getElementById("nation1").textContent = gameDetails.nation1;
