--- a/result.html
+++ b/result.html
@@ -360,7 +360,6 @@
       // If it's past 9 AM UK time on the next day, clear the playedToday flag
       if (ukTime >= targetTime && playedUKTime < targetTime) {
         clearPlayedToday();
-        localStorage.setItem('playedToday', 'false'); // Add this line here
       }
     }
   }, 60 * 1000); // Check every minute
@@ -385,9 +384,9 @@
   const playedDate = new Date(playedTimestamp);
   const playedUKTime = getUKTime(playedDate);
 
-  // If it's past 9 AM UK time on the next day and playedToday is not set, redirect the user to index.html
-  if (ukTime >= targetTime && playedUKTime < targetTime && !localStorage.getItem('playedToday')) {
-    localStorage.setItem('playedToday', 'true');
+  // If it's past 9 AM UK time on the next day, clear the playedToday flag and redirect the user to index.html
+  if (ukTime >= targetTime && playedUKTime < targetTime) {
+    clearPlayedToday();
     window.location.href = 'index.html';
   }
 }
