--- a/index.html
+++ b/index.html
@@ -484,15 +484,15 @@
       </div>
       <script>
          const gameDetails = {
-         	nation1: "England",
-         	nation2: "Pakistan",
-         	date: "Aug 5-8, 2020",
-         	venue: "Manchester",
-         	score: "Pakistan 326 & 169, England (T: 277) 219 & 277/7; England won by 3 wickets",
-         	crickdlequestion: "England player scored 84* and took 2/43 & 2/11 in this match?"
+         	nation1: "West Indies",
+         	nation2: "England",
+         	date: "May 1-3, 2015",
+         	venue: "Bridgetown",
+         	score: "England 257 & 123, West Indies (T: 192) 189 & 194/5; West Indies won by 5 wickets",
+         	crickdlequestion: "West Indies player scored 85 & 47* in this match?"
          };
          
-         const correctPlayer = ["WOAKES"];
+         const correctPlayer = ["BLACKWOOD"];
          localStorage.setItem("correctPlayer", JSON.stringify(correctPlayer[0]));
          
          document.getElementById("nation1").textContent = gameDetails.nation1;
