--- a/index.html
+++ b/index.html
@@ -484,15 +484,15 @@
       </div>
       <script>
          const gameDetails = {
-         	nation1: "West Indies",
-         	nation2: "England",
-         	date: "May 1-3, 2015",
-         	venue: "Bridgetown",
-         	score: "England 257 & 123, West Indies (T: 192) 189 & 194/5; West Indies won by 5 wickets",
-         	crickdlequestion: "West Indies player scored 85 & 47* in this match?"
+         	nation1: "Sri Lanka",
+         	nation2: "West Indies",
+         	date: "Jul 13-16, 2005",
+         	venue: "Colombo (SSC)",
+         	score: "West Indies 285 & 113, Sri Lanka (T: 172) 227 & 172/4; Sri Lanka won by 6 wickets",
+         	crickdlequestion: "Sri Lanka player scored 49 and took 3/35 & 4/15 in this match?"
          };
          
-         const correctPlayer = ["BLACKWOOD"];
+         const correctPlayer = ["VAAS"];
          localStorage.setItem("correctPlayer", JSON.stringify(correctPlayer[0]));
          
          document.getElementById("nation1").textContent = gameDetails.nation1;
