--- a/index.html
+++ b/index.html
@@ -484,15 +484,15 @@
       </div>
       <script>
          const gameDetails = {
-         	nation1: "Sri Lanka",
-         	nation2: "West Indies",
-         	date: "Jul 13-16, 2005",
-         	venue: "Colombo (SSC)",
-         	score: "West Indies 285 & 113, Sri Lanka (T: 172) 227 & 172/4; Sri Lanka won by 6 wickets",
-         	crickdlequestion: "Sri Lanka player scored 49 and took 3/35 & 4/15 in this match?"
+         	nation1: "India",
+         	nation2: "Sri Lanka",
+         	date: "Dec 2-6, 2017",
+         	venue: "Delhi",
+         	score: "India 536/7d & 246/5d, Sri Lanka (T: 410) 373 & 299/5; Match drawn",
+         	crickdlequestion: "India player scored 243 & 50 in this match?"
          };
          
-         const correctPlayer = ["VAAS"];
+         const correctPlayer = ["KOHLI"];
          localStorage.setItem("correctPlayer", JSON.stringify(correctPlayer[0]));
          
          document.getElementById("nation1").textContent = gameDetails.nation1;
