--- a/index.html
+++ b/index.html
@@ -484,15 +484,15 @@
       </div>
       <script>
          const gameDetails = {
-         	nation1: "India",
-         	nation2: "Sri Lanka",
-         	date: "Dec 2-6, 2017",
-         	venue: "Delhi",
-         	score: "India 536/7d & 246/5d, Sri Lanka (T: 410) 373 & 299/5; Match drawn",
-         	crickdlequestion: "India player scored 243 & 50 in this match?"
+         	nation1: "Bangladesh",
+         	nation2: "Australia",
+         	date: "Aug 27-30, 2017",
+         	venue: "Mirpur",
+         	score: "Bangladesh 260 & 221, Australia (T: 265) 217 & 244; Bangladesh won by 20 runs",
+         	crickdlequestion: "Bangladesh player scored 84 and took 5/68 & 5/85 in this match?"
          };
          
-         const correctPlayer = ["KOHLI"];
+         const correctPlayer = ["AL HASAN"];
          localStorage.setItem("correctPlayer", JSON.stringify(correctPlayer[0]));
          
          document.getElementById("nation1").textContent = gameDetails.nation1;
