--- a/index.html
+++ b/index.html
@@ -484,15 +484,15 @@
       </div>
       <script>
          const gameDetails = {
-         	nation1: "Bangladesh",
-         	nation2: "Australia",
-         	date: "Aug 27-30, 2017",
-         	venue: "Mirpur",
-         	score: "Bangladesh 260 & 221, Australia (T: 265) 217 & 244; Bangladesh won by 20 runs",
-         	crickdlequestion: "Bangladesh player scored 84 and took 5/68 & 5/85 in this match?"
+         	nation1: "Australia",
+         	nation2: "Sri Lanka",
+         	date: "Jan 24-26, 2019",
+         	venue: "Brisbane",
+         	score: "Sri Lanka 144 & 139, Australia 323; Australia won by an innings and 40 runs",
+         	crickdlequestion: "Which Australia player took 4/39 & 6/23 in this match?"
          };
          
-         const correctPlayer = ["AL HASAN"];
+         const correctPlayer = ["CUMMINS"];
          localStorage.setItem("correctPlayer", JSON.stringify(correctPlayer[0]));
          
          document.getElementById("nation1").textContent = gameDetails.nation1;
