--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
          	date: "Jan 24-26, 2019",
          	venue: "Brisbane",
          	score: "Sri Lanka 144 & 139, Australia 323; Australia won by an innings and 40 runs",
-         	crickdlequestion: "Which Australia player took 4/39 & 6/23 in this match?"
+         	crickdlequestion: "Australia player took 4/39 & 6/23 in this match?"
          };
          
          const correctPlayer = ["CUMMINS"];
