--- a/index.html
+++ b/index.html
@@ -484,15 +484,15 @@
       </div>
       <script>
          const gameDetails = {
-         	nation1: "Australia",
-         	nation2: "Sri Lanka",
-         	date: "Jan 24-26, 2019",
-         	venue: "Brisbane",
-         	score: "Sri Lanka 144 & 139, Australia 323; Australia won by an innings and 40 runs",
-         	crickdlequestion: "Australia player took 4/39 & 6/23 in this match?"
+         	nation1: "South Africa",
+         	nation2: "England",
+         	date: "Jan 2-5, 2000",
+         	venue: "Cape Town",
+         	score: "England 258 & 126, South Africa 421; South Africa won by an innings and 37 runs",
+         	crickdlequestion: "South Africa player scored 120 in this match?"
          };
          
-         const correctPlayer = ["CUMMINS"];
+         const correctPlayer = ["CULLINAN"];
          localStorage.setItem("correctPlayer", JSON.stringify(correctPlayer[0]));
          
          document.getElementById("nation1").textContent = gameDetails.nation1;
