--- a/index.html
+++ b/index.html
@@ -484,15 +484,15 @@
       </div>
       <script>
          const gameDetails = {
-         	nation1: "South Africa",
+         	nation1: "Bangladesh",
          	nation2: "England",
-         	date: "Jan 2-5, 2000",
-         	venue: "Cape Town",
-         	score: "England 258 & 126, South Africa 421; South Africa won by an innings and 37 runs",
-         	crickdlequestion: "South Africa player scored 120 in this match?"
+         	date: "Oct 29-Nov 1, 2003",
+         	venue: "Chattogram",
+         	score: "England 326 & 293/5d, Bangladesh (T: 468) 152 & 138; England won by 329 runs",
+         	crickdlequestion: "England player took 5/49 & 4/44 in this match?"
          };
          
-         const correctPlayer = ["CULLINAN"];
+         const correctPlayer = ["JOHNSON"];
          localStorage.setItem("correctPlayer", JSON.stringify(correctPlayer[0]));
          
          document.getElementById("nation1").textContent = gameDetails.nation1;
