--- a/index.html
+++ b/index.html
@@ -484,15 +484,15 @@
       </div>
       <script>
          const gameDetails = {
-         	nation1: "Bangladesh",
-         	nation2: "England",
-         	date: "Oct 29-Nov 1, 2003",
-         	venue: "Chattogram",
-         	score: "England 326 & 293/5d, Bangladesh (T: 468) 152 & 138; England won by 329 runs",
-         	crickdlequestion: "England player took 5/49 & 4/44 in this match?"
+         	nation1: "England",
+         	nation2: "Australia",
+         	date: "Sep 4-8, 2019",
+         	venue: "Manchester",
+         	score: "Australia 497/8d & 186/6d, England (T: 383) 301 & 197; Australia won by 185 runs",
+         	crickdlequestion: "Australia player scored 211 & 82 in this match?"
          };
          
-         const correctPlayer = ["JOHNSON"];
+         const correctPlayer = ["SMITH"];
          localStorage.setItem("correctPlayer", JSON.stringify(correctPlayer[0]));
          
          document.getElementById("nation1").textContent = gameDetails.nation1;
