--- a/index.html
+++ b/index.html
@@ -484,15 +484,15 @@
       </div>
       <script>
          const gameDetails = {
-         	nation1: "England",
-         	nation2: "Australia",
-         	date: "Sep 4-8, 2019",
-         	venue: "Manchester",
-         	score: "Australia 497/8d & 186/6d, England (T: 383) 301 & 197; Australia won by 185 runs",
-         	crickdlequestion: "Australia player scored 211 & 82 in this match?"
+         	nation1: "New Zealand",
+         	nation2: "Pakistan",
+         	date: "Nov 17-21, 2014",
+         	venue: "Dubai (DSC)",
+         	score: "New Zealand 403 & 250/9d, Pakistan (T: 261) 393 & 196/5; Match drawn",
+         	crickdlequestion: "New Zealand player scored 23 & 104 in this match?"
          };
          
-         const correctPlayer = ["SMITH"];
+         const correctPlayer = ["TAYLOR"];
          localStorage.setItem("correctPlayer", JSON.stringify(correctPlayer[0]));
          
          document.getElementById("nation1").textContent = gameDetails.nation1;
