--- a/index.html
+++ b/index.html
@@ -484,15 +484,15 @@
       </div>
       <script>
          const gameDetails = {
-         	nation1: "New Zealand",
-         	nation2: "Pakistan",
-         	date: "Nov 17-21, 2014",
-         	venue: "Dubai (DSC)",
-         	score: "New Zealand 403 & 250/9d, Pakistan (T: 261) 393 & 196/5; Match drawn",
-         	crickdlequestion: "New Zealand player scored 23 & 104 in this match?"
+         	nation1: "Sri Lanka",
+         	nation2: "India",
+         	date: "Jul 26-29, 2017",
+         	venue: "Galle",
+         	score: "India 600 & 240/3d, Sri Lanka (T: 550) 291 & 245; India won by 304 runs",
+         	crickdlequestion: "India player scored 190 in this match?"
          };
          
-         const correctPlayer = ["TAYLOR"];
+         const correctPlayer = ["DHAWAN"];
          localStorage.setItem("correctPlayer", JSON.stringify(correctPlayer[0]));
          
          document.getElementById("nation1").textContent = gameDetails.nation1;
