--- a/index.html
+++ b/index.html
@@ -483,16 +483,7 @@
          </div>
       </div>
       <script>
-         const gameDetails = {
-         	nation1: "West Indies",
-         	nation2: "Sri Lanka",
-         	date: "Mar 22-26, 2008",
-         	venue: "Providence",
-         	score: "Sri Lanka 476/8d & 240/7d, West Indies (T: 437) 280 & 315; Sri Lanka won by 121 runs",
-         	crickdlequestion: "Sri Lanka player scored 54* and took 3/48 & 5/61 in this match?"
-         };
-         
-         const correctPlayer = ["VAAS"];
+      <script src="gameDetails.js"></script>
          localStorage.setItem("correctPlayer", JSON.stringify(correctPlayer[0]));
          
          document.getElementById("nation1").textContent = gameDetails.nation1;
